# AISignal

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4f386ad98446_initial_schema.py  65cd4d5a9a77_add_signal_counts_json_to_user_ml_.py  a1b2c3d4e5f6_add_composite_indexes.py
config/: .env.example  config.yaml.example
scripts/: offline_eval.py  run_embeddings.py  run_fetch.py  run_metrics.py  run_process.py  run_send.py  visualize_embeddings.py
src/: __init__.py  config.py  logging_config.py  utils.py
src/email_delivery/: __init__.py  sender.py
src/embeddings/: __init__.py  pipeline.py  provider.py  similarity.py  user_model_store.py  user_tower.py
src/fetchers/: __init__.py  anthropic_blog.py  arxiv_fetcher.py  base.py  github_trending.py  huggingface.py  reddit.py  rss.py  twitter.py
src/llm/: __init__.py  prompts.py  provider.py  summarizer.py
src/metrics/: __init__.py  calculator.py
src/personalization/: __init__.py  digest_builder.py  exploration.py  learner.py  scorer.py
src/pipeline/: __init__.py  orchestrator.py  processor.py  scheduler.py
src/storage/: __init__.py  database.py  models.py  queries.py
src/web/: __init__.py  app.py  auth_utils.py  csrf.py  digest_token.py  rate_limit.py  template_engine.py  token_utils.py
src/web/routes/: api.py  (+7 more)
tests/: test_digest_builder.py  test_metrics.py  test_personalization_fixes.py  test_scoring.py  test_web_routes.py
tests/test_email/: test_sender.py
tests/test_fetchers/: test_fetchers.py
tests/test_llm/: test_summarizer.py
(+29 files in other folders)
